@@ -1,3 +1,7 @@
+- fixed issue where dependencies would not be cleaned up when component creation failed
+
+- fixed issue where startable component would be created twice when property dependency could not be resolved
+
 - fixed bug that caused exception when proxied component and it's proxied property dependency shared interceptor
 
 2.5.0 beta2 (2010-07-21)
